--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ dico-snds.Rproj
 .Rproj.user
 test_elastic.R
 app/current_ip.txt
-app/server/mongo_password.txt
+app/server/var_env.txt
 app/rsconnect/
